src/objects/ffps_custRem__Custom_Log__c.object
<CustomObject>
    <fields>
        <fullName>ffps_custRem__Detail__c</fullName>
        <label>Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Grouping__c</fullName>
        <description>Optional text field used to group entries together, e.g. for batch jobs this could be the Job Id etc. This is just to make it easier to identify related errors, say if multiple batch jobs are logging simultaneously.</description>
        <inlineHelpText>Optional text field used to group entries together, e.g. for batch jobs this could be the Job Id etc. This is just to make it easier to identify related errors, say if multiple batch jobs are logging simultaneously.</inlineHelpText>
        <label>Grouping</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Related_Object_Key__c</fullName>
        <description>Optional field holding either the name or Id of any specific object associated with this entry.</description>
        <inlineHelpText>Optional field holding either the name or Id of any specific object associated with this entry.</inlineHelpText>
        <label>Related Object Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Running_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Running User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Custom_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_custRem__Timestamp__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Timestamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>Custom Log</label>
    <listViews>
        <fullName>ffps_custRem__All</fullName>
        <columns>NAME</columns>
        <columns>ffps_custRem__Timestamp__c</columns>
        <columns>ffps_custRem__Message__c</columns>
        <columns>ffps_custRem__Detail__c</columns>
        <columns>ffps_custRem__Grouping__c</columns>
        <columns>ffps_custRem__Related_Object_Key__c</columns>
        <columns>ffps_custRem__Running_User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LE{00000000}</displayFormat>
        <label>Custom Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>